# FileSquirrel

./: .gitignore  README.md  README_EN.md  TODO.md  config.yaml.example  pyproject.toml  requirements.txt  start.bat
src/: __init__.py  agent.py  analyzer.py  config.py  database.py  logger.py  main.py  organizer.py  rollback.py  scanner.py  scheduler.py
